--- a/src/main/resources/static/css/mypage/exchange-request.css
+++ b/src/main/resources/static/css/mypage/exchange-request.css
@@ -61,6 +61,7 @@
     align-items: center;
     justify-content: flex-start;
     margin-bottom: 16px;
+    margin-top: 30px;
 }
 
 .change-modal-form-label {
@@ -126,4 +127,13 @@
     display: inline-block;
     font-size: 16px;
     font-weight: 500;
+}
+
+.error-message {
+    margin: 8px 0px 0px;
+    color: rgb(255, 87, 87);
+    font-size: 13px;
+    line-height: 20px;
+    letter-spacing: -0.015em;
+    display: none;
 }
