--- a/src/main/resources/static/css/mypage/withdraw-check.css
+++ b/src/main/resources/static/css/mypage/withdraw-check.css
@@ -155,6 +155,7 @@
     display: flex;
     -webkit-box-pack: center;
     justify-content: center;
+    display: none;
 }
 
 .check {
@@ -201,4 +202,66 @@
     padding: 0px 16px;
     background-color: rgb(61, 61, 61);
     color: rgb(255, 255, 255);
+}
+
+
+.modal-wrap {
+    position: absolute;
+    width: auto;
+    z-index: 9999;
+    left: 0px;
+    top: 0px;
+    display: none;
+}
+
+.modal-container {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(13, 13, 13, 0.65);
+}
+
+.modal {
+    max-width: 60%;
+    min-width: 328px;
+    position: absolute;
+    background: rgb(255, 255, 255);
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 2px 16px 0px;
+    border-radius: 4px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+}
+
+.modal-content {
+    color: rgb(13, 13, 13);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    font-size: 16px;
+    line-height: 27px;
+    letter-spacing: -0.020em;
+}
+
+.modal-ok-div {
+    border-top: 1px solid rgb(230, 230, 230);
+    display: flex;
+    justify-content: center;
+}
+
+.modal-ok {
+    flex-grow: 1;
+    border: 0px;
+    background: rgb(255, 255, 255);
+    font-weight: bold;
+    padding-top: 15px;
+    padding-bottom: 17px;
+    font-size: 16px;
+    line-height: 27px;
+    letter-spacing: -0.020em;
+    color: rgb(255, 87, 87);
+    cursor: pointer;
 }
