--- a/src/main/resources/templates/join-login/email-join.html
+++ b/src/main/resources/templates/join-login/email-join.html
@@ -25,7 +25,7 @@
                 <div class="join-inner-wrap">
                     <h1 class="join-title">이메일로 가입하기</h1>
 
-                    <form action="">
+                    <form action="" name="joinForm">
                         <div class="input-div">
                             <div class="input-title">이름</div>
                             <div class="input-include-div">
@@ -33,7 +33,7 @@
                                     <input type="text" class="input-write" placeholder="사용하실 이름을 입력해주세요">
                                 </span>
                             </div>
-                            <div class="email-error">이름을 입력해주세요</div>
+                            <div class="email-error">비워놓을 수 없습니다.</div>
                         </div>
                         <div class="input-div">
                             <div class="input-title">이메일 주소</div>
@@ -42,13 +42,13 @@
                                     <input type="text" class="input-write" placeholder="이메일 주소를 입력해주세요">
                                 </span>
                             </div>
-                            <div class="email-error">이메일 주소를 입력해주세요</div>
+                            <div class="email-error">비워놓을 수 없습니다.</div>
                             <div class="input-include-div">
                                 <span class="input-include-span">
                                     <input type="text" class="input-write" placeholder="이메일 주소를 확인합니다">
                                 </span>
                             </div>
-                            <div class="email-error">이메일 주소를 입력해주세요</div>
+                            <div class="email-error">비워놓을 수 없습니다.</div>
                         </div>
                         <div class="input-div">
                             <div class="input-title">비밀번호</div>
@@ -57,25 +57,25 @@
                                     <input type="password" class="input-write" placeholder="비밀번호를 입력해주세요">
                                 </span>
                             </div>
-                            <div class="email-error">비밀번호를 입력해주세요</div>
+                            <div class="email-error">비워놓을 수 없습니다.</div>
                             <div class="input-include-div">
                                 <span class="input-include-span">
                                     <input type="password" class="input-write" placeholder="비밀번호를 확인합니다">
                                 </span>
                             </div>
-                            <div class="email-error">비밀번호를 입력해주세요</div>
+                            <div class="email-error">비워놓을 수 없습니다.</div>
                         </div>
                         <div class="input-div">
-                            <div class="input-title">주소</div>
+                            <div class="input-title">주소 (선택)</div>
                             <div class="input-include-div">
                                 <span class="input-include-span" style="padding: 0px 0px 0px 12px;">
-                                    <input type="text" class="input-write" placeholder="주소를 입력해주세요" readonly>
-                                    <button class="find-address">검색</button>
+                                    <input type="text" class="input-write" id="address" placeholder="주소를 입력해주세요" readonly>
+                                    <button class="find-address" type="button" onclick="sample6_execDaumPostcode()">검색</button>
                                 </span>
                             </div>
                         </div>
                         <div class="input-div">
-                            <div class="input-title">나이</div>
+                            <div class="input-title">나이 (선택)</div>
                             <div class="input-include-div">
                                 <span class="input-include-span">
                                     <input type="text" class="input-write" placeholder="나이를 입력해주세요" maxlength="2">
@@ -83,16 +83,18 @@
                             </div>
                         </div>
                         <div class="input-div">
-                            <div class="input-title">관심봉사활동</div>
+                            <div class="input-title">관심봉사활동 (선택)</div>
                             <div class="input-include-div" style="margin: 0;">
-                                <span class="input-include-span" style="cursor: pointer;">
-                                    <input type="text" class="input-write" placeholder="관심봉사활동을 선택해주세요" readonly>
-                                    <div>
-                                        <svg height="20" width="20" style="padding-top: 8px;" viewBox="0 0 20 20" aria-hidden="true" focusable="false" class="css-8mmkcg">
-                                           <path d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"></path>
-                                        </svg>
-                                    </div>
-                                </span>
+                                <label for="drop-span">
+                                    <span class="input-include-span" id="drop-span" style="cursor: pointer;">
+                                        <input type="text" class="input-write" id="interest-volunteer" placeholder="관심봉사활동을 선택해주세요" readonly>
+                                        <div>
+                                            <svg height="20" width="20" style="padding-top: 8px;" viewBox="0 0 20 20" aria-hidden="true" focusable="false" class="css-8mmkcg">
+                                                <path d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"></path>
+                                            </svg>
+                                        </div>
+                                    </span>
+                                </label>
                             </div>
                             <div class="drop-content">
                                 <p>정</p>
@@ -107,13 +109,20 @@
                         <div class="agree-outer">
                             <div class="agree-wrap">
                                 <div class="agree-inner">
-                                    <label for="" class="agree agree-all">
-                                        <input type="checkbox" name="" id="">전체동의
-                                    </label>
+                                    <div for="agree-all" class="agree-all">
+                                        <span class="checked-span">
+                                            <div class="checked-div">
+                                                <svg viewBox="0 0 48 48">
+                                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M41.6 8L18.9 30.8L6.2 19L2 23.5L19.1 39.4L46 12.4L41.6 8Z"></path>
+                                                </svg>
+                                            </div>
+                                        </span>
+                                        <input type="checkbox" name="" id="agree-all">전체동의
+                                    </div>
                                     <div class="border"></div>
                                     <ul class="agree-ul">
                                         <li class="agree-li">
-                                            <label for="" class="agree">
+                                            <div for="agree-first" class="agree">
                                                 <span class="checked-span">
                                                     <div class="checked-div">
                                                         <svg viewBox="0 0 48 48">
@@ -121,35 +130,63 @@
                                                         </svg>
                                                     </div>
                                                 </span>
-                                                <input type="checkbox" name="" id="">만 14세 이상입니다.(필수)
-                                            </label>
+                                                <input type="checkbox" name="" id="agree-first">만 14세 이상입니다.(필수)
+                                            </div>
                                         </li>
                                         <li class="agree-li">
-                                            <label for="" class="agree">
-                                                <input type="checkbox" name="" id="">심봉사 이용 약관동의(필수)
-                                            </label>
+                                            <div for="agree-second" class="agree">
+                                                <span class="checked-span">
+                                                    <div class="checked-div">
+                                                        <svg viewBox="0 0 48 48">
+                                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M41.6 8L18.9 30.8L6.2 19L2 23.5L19.1 39.4L46 12.4L41.6 8Z"></path>
+                                                        </svg>
+                                                    </div>
+                                                </span>
+                                                <input type="checkbox" name="" id="agree-second">심봉사 이용 약관동의(필수)
+                                            </div>
                                         </li>
                                         <li class="agree-li">
-                                            <label for="" class="agree">
-                                                <input type="checkbox" name="" id="">개인정보 수집 및 이용 동의(필수)
-                                            </label>
+                                            <div for="agree-third" class="agree">
+                                                <span class="checked-span">
+                                                    <div class="checked-div">
+                                                        <svg viewBox="0 0 48 48">
+                                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M41.6 8L18.9 30.8L6.2 19L2 23.5L19.1 39.4L46 12.4L41.6 8Z"></path>
+                                                        </svg>
+                                                    </div>
+                                                </span>
+                                                <input type="checkbox" name="" id="agree-third">개인정보 수집 및 이용 동의(필수)
+                                            </div>
                                         </li>
                                         <li class="agree-li">
-                                            <label for="" class="agree">
-                                                <input type="checkbox" name="" id="">개인정보 제 3자 제공 동의(선택)
-                                            </label>
+                                            <div for="agree-fourth" class="agree">
+                                                <span class="checked-span">
+                                                    <div class="checked-div">
+                                                        <svg viewBox="0 0 48 48">
+                                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M41.6 8L18.9 30.8L6.2 19L2 23.5L19.1 39.4L46 12.4L41.6 8Z"></path>
+                                                        </svg>
+                                                    </div>
+                                                </span>
+                                                <input type="checkbox" name="" id="agree-fourth">개인정보 제 3자 제공 동의(선택)
+                                            </div>
                                         </li>
                                         <li class="agree-li">
-                                            <label for="" class="agree">
-                                                <input type="checkbox" name="" id="">마케팅 정보 수신 동의(선택)
-                                            </label>
+                                            <div for="agree-fifth" class="agree">
+                                                <span class="checked-span">
+                                                    <div class="checked-div">
+                                                        <svg viewBox="0 0 48 48">
+                                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M41.6 8L18.9 30.8L6.2 19L2 23.5L19.1 39.4L46 12.4L41.6 8Z"></path>
+                                                        </svg>
+                                                    </div>
+                                                </span>
+                                                <input type="checkbox" name="" id="agree-fifth">마케팅 정보 수신 동의(선택)
+                                            </div>
                                         </li>
                                     </ul>
                                 </div>
                             </div>
-                            <div class="email-error">필수 동의 내용을 체크해주세요</div>
+                            <div class="check-error">필수 동의 내용을 체크해주세요.</div>
                         </div>
-                        <button class="submit-button">
+                        <button class="submit-button" type="button">
                             <span>가입하기</span>
                         </button>
                     </form>
@@ -161,4 +198,6 @@
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+<script src="../../static/js/join-login/email.join.js"></script>
 </html>
