--- a/src/main/resources/templates/mypage/exchange-request.html
+++ b/src/main/resources/templates/mypage/exchange-request.html
@@ -101,12 +101,13 @@
                         <div class="change-modal-title-row">
                             <h4 class="change-modal-title-text">공양미 환전 요청</h4>
                         </div>
-                        <form action="" class="change-modal-form-wrapper">
+                        <form action="" class="change-modal-form-wrapper" name="exchangeForm">
                             <div class="change-modal-form-row">
                                 <span class="change-modal-form-label">이름</span>
                                 <div class="change-modal-form-field">
                                     <div class="change-modal-form-title">
-                                        <input type="text" placeholder="이름을 입력하세요." class="change-modal-form-title-input">
+                                        <input type="text" placeholder="이름을 입력하세요." id="name" class="change-modal-form-title-input" maxlength="4">
+                                        <div class="error-message">비워둘 수 없습니다.</div>
                                     </div>
                                 </div>
                             </div>
@@ -115,6 +116,7 @@
                                 <div class="change-modal-form-field">
                                     <div class="change-modal-form-title">
                                         <input type="text" placeholder="계좌번호를 입력해주세요." class="change-modal-form-title-input">
+                                        <div class="error-message">비워둘 수 없습니다.</div>
                                     </div>
                                 </div>
                             </div>
@@ -123,9 +125,10 @@
                                 <div class="change-modal-form-field">
                                     <div class="change-modal-form-title">
                                         <input type="text" placeholder="환전할 공양미 개수를 입력하세요." class="change-modal-form-title-input">
+                                        <div class="error-message">비워둘 수 없습니다.</div>
                                         <div class="able-exchange">
                                             환전 가능한 공양미 수 : 
-                                            <span class="able-exchange-rice">300석</span>
+                                            <span class="able-exchange-rice">300</span>석
                                         </div>
                                     </div>
                                 </div>
@@ -154,5 +157,5 @@
         $('#_footer').load('../main/footer.html');
     });
 </script>
-<script src="../../static/js/mypage/my-question.js"></script>
+<script src="../../static/js/mypage/exchange-request.js"></script>
 </html>
