--- a/src/main/resources/templates/mypage/support-request.html
+++ b/src/main/resources/templates/mypage/support-request.html
@@ -79,7 +79,7 @@
                         </span>
                         <span class="header-menu-element">
                             <div class="header-menu-div">
-                                <a href="" class="header-menu-a-select">공양미 환전요청</a>
+                                <a href="" class="header-menu-a">공양미 환전요청</a>
                             </div>
                         </span>
                         <span class="header-menu-element">
