메인 반응형 빼고 완료

--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -893,6 +893,189 @@
                                                         </div>
 
 
+                                                        <!-- ---------------------------------- -->
+                                                        <div class="swiper-slide swiper-slide-active" style= "width:220.8px; margin-right: 14px;">
+                                                            <div></div>
+                                                            <div class="volunteer-percentage-wrapper">
+                                                                <div></div>
+                                                                <div class="volunteer-link-wrapper">
+                                                                    <div class="volunteer-image-wrapper">
+                                                                        <a href="#"></a>
+                                                                        <div class="like-button-wrapper">
+                                                                            <button  class="like-button" type="button">
+                                                                                <span>좋아요</span>
+                                                                            </button>
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="info-wrapper">
+                                                                        <dl>
+                                                                            <dd class="volunteer-sub-info">
+                                                                                <span>
+                                                                                    <a href="#">봉사 카테고리</a>
+                                                                                </span>
+                                                                                <span>
+                                                                                    <a href="#">봉사 지역</a>
+                                                                                </span>
+                                                                            </dd>
+                                                                            <dt>
+                                                                                <a href="">
+                                                                                    <strong>봉사 제목</strong>
+                                                                                </a>
+                                                                            </dt>
+                                                                        </dl>
+                                                                        <div class="funding-status">
+                                                                            <span class="percentage">36% 달성</span>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="swiper-slide swiper-slide-active" style= "width:220.8px; margin-right: 14px;">
+                                                            <div></div>
+                                                            <div class="volunteer-percentage-wrapper">
+                                                                <div></div>
+                                                                <div class="volunteer-link-wrapper">
+                                                                    <div class="volunteer-image-wrapper">
+                                                                        <a href="#"></a>
+                                                                        <div class="like-button-wrapper">
+                                                                            <button  class="like-button" type="button">
+                                                                                <span>좋아요</span>
+                                                                            </button>
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="info-wrapper">
+                                                                        <dl>
+                                                                            <dd class="volunteer-sub-info">
+                                                                                <span>
+                                                                                    <a href="#">봉사 카테고리</a>
+                                                                                </span>
+                                                                                <span>
+                                                                                    <a href="#">봉사 지역</a>
+                                                                                </span>
+                                                                            </dd>
+                                                                            <dt>
+                                                                                <a href="">
+                                                                                    <strong>봉사 제목</strong>
+                                                                                </a>
+                                                                            </dt>
+                                                                        </dl>
+                                                                        <div class="funding-status">
+                                                                            <span class="percentage">36% 달성</span>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="swiper-slide swiper-slide-active" style= "width:220.8px; margin-right: 14px;">
+                                                            <div></div>
+                                                            <div class="volunteer-percentage-wrapper">
+                                                                <div></div>
+                                                                <div class="volunteer-link-wrapper">
+                                                                    <div class="volunteer-image-wrapper">
+                                                                        <a href="#"></a>
+                                                                        <div class="like-button-wrapper">
+                                                                            <button  class="like-button" type="button">
+                                                                                <span>좋아요</span>
+                                                                            </button>
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="info-wrapper">
+                                                                        <dl>
+                                                                            <dd class="volunteer-sub-info">
+                                                                                <span>
+                                                                                    <a href="#">봉사 카테고리</a>
+                                                                                </span>
+                                                                                <span>
+                                                                                    <a href="#">봉사 지역</a>
+                                                                                </span>
+                                                                            </dd>
+                                                                            <dt>
+                                                                                <a href="">
+                                                                                    <strong>봉사 제목</strong>
+                                                                                </a>
+                                                                            </dt>
+                                                                        </dl>
+                                                                        <div class="funding-status">
+                                                                            <span class="percentage">36% 달성</span>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="swiper-slide swiper-slide-active" style= "width:220.8px; margin-right: 14px;">
+                                                            <div></div>
+                                                            <div class="volunteer-percentage-wrapper">
+                                                                <div></div>
+                                                                <div class="volunteer-link-wrapper">
+                                                                    <div class="volunteer-image-wrapper">
+                                                                        <a href="#"></a>
+                                                                        <div class="like-button-wrapper">
+                                                                            <button  class="like-button" type="button">
+                                                                                <span>좋아요</span>
+                                                                            </button>
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="info-wrapper">
+                                                                        <dl>
+                                                                            <dd class="volunteer-sub-info">
+                                                                                <span>
+                                                                                    <a href="#">봉사 카테고리</a>
+                                                                                </span>
+                                                                                <span>
+                                                                                    <a href="#">봉사 지역</a>
+                                                                                </span>
+                                                                            </dd>
+                                                                            <dt>
+                                                                                <a href="">
+                                                                                    <strong>봉사 제목</strong>
+                                                                                </a>
+                                                                            </dt>
+                                                                        </dl>
+                                                                        <div class="funding-status">
+                                                                            <span class="percentage">36% 달성</span>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="swiper-slide swiper-slide-active" style= "width:220.8px; margin-right: 14px;">
+                                                            <div></div>
+                                                            <div class="volunteer-percentage-wrapper">
+                                                                <div></div>
+                                                                <div class="volunteer-link-wrapper">
+                                                                    <div class="volunteer-image-wrapper">
+                                                                        <a href="#"></a>
+                                                                        <div class="like-button-wrapper">
+                                                                            <button  class="like-button" type="button">
+                                                                                <span>좋아요</span>
+                                                                            </button>
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="info-wrapper">
+                                                                        <dl>
+                                                                            <dd class="volunteer-sub-info">
+                                                                                <span>
+                                                                                    <a href="#">봉사 카테고리</a>
+                                                                                </span>
+                                                                                <span>
+                                                                                    <a href="#">봉사 지역</a>
+                                                                                </span>
+                                                                            </dd>
+                                                                            <dt>
+                                                                                <a href="">
+                                                                                    <strong>봉사 제목</strong>
+                                                                                </a>
+                                                                            </dt>
+                                                                        </dl>
+                                                                        <div class="funding-status">
+                                                                            <span class="percentage">36% 달성</span>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+
+
                                                     </div>
                                                 </div>
                                             </div>
@@ -921,6 +1104,7 @@
     </body>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="../../static/js/main/banner.js"></script>
+    <script src="../../static/js/main/main.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             $('#_header').load('../main/header.html');
